--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Happy Birthday Pakhi</title>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<link rel="stylesheet" type="text/css" href="loading.css">
-	<link href='https://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet/less" href="cake.less">
-	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
+    <title>Happy Birthday Pakhi</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="loading.css">
+    <link href='https://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet/less" href="cake.less">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
     <style>
-        /* লক স্ক্রিন ডিজাইন */
         #lock-screen {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: #ffe4e1; z-index: 9999; display: flex;
@@ -31,7 +30,7 @@
         <div id="timer"></div>
         <p>Please wait madam until the 17th of the month❤️</p>
         <div class="pass-box">
-            <input type="password" id="password" placeholder="গোপন পাসওয়ার্ড দিন...">
+            <input type="password" id="password" placeholder="গোপন পাসওয়ার্ড দিন...">
             <button onclick="checkPass()">Unlock</button>
         </div>
     </div>
@@ -51,9 +50,7 @@
         <img src="Balloon-Border.png" width="100%" class="balloon-border">
 
         <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center"><img src="banner.png" class="bannar"></div>
-            </div>
+            <div class="row"><div class="col-md-12 text-center"><img src="banner.png" class="bannar"></div></div>
             <div class="row cake-cover">
                 <div class="col-md-12 text-center">
                     <div class="cake">
@@ -66,12 +63,29 @@
             <div class="row message">
                 <div class="col-md-12">
                     <p>Happy 17th Birthday Jaan ❤️</p>
-                    <p>It’s wild to think that this is your last year</p>
-                    <p>before the world starts calling you an adult.</p>
-                    <p>You have this amazing energy</p>
-                    <p>that makes everything better the second you show up.</p>
+                    <p>It’s wild to think that this is your last year before the world starts calling you an adult.</p>
+                    <p>You have this amazing energy that makes everything better the second you show up.</p>
                     <p><strong>I love you a lot ❤️❤️</strong></p>
                     <p>Happy Birthday Makfi!</p>
+                </div>
+            </div>
+
+            <div class="text-center" style="margin-top: 20px; margin-bottom: 100px;">
+                <button class="btn btn-primary" id="birthday_girl">Birthday Girl</button>
+                <div id="gallery" style="display:none; margin-top:30px;">
+                    <h3 style="color: #ef5350;">BIRTHDAY GIRL❤️</h3>
+                    <div style="max-width: 300px; margin: auto;">
+                        <img src="m1.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff;">
+                        <img src="m2.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
+                        <img src="m3.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
+                        <img src="m4.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
+                        <img src="m5.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
+                        <img src="m6.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
+                        <img src="m7.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
+                        <img src="m8.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
+                        <img src="m9.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
+                        <img src="m10.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
+                    </div>
                 </div>
             </div>
 
@@ -97,69 +111,51 @@
     <script src="effect.js"></script>
 
     <script>
-        // ১৭ ফেব্রুয়ারি ২০২৬ তারিখটি সেট করা
         var countDate = new Date('Feb 17, 2026 00:00:00').getTime();
 
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script>
-    // ১. টাইমার সেট করা (ফেব্রুয়ারি ১৭, ২০২৬)
-    var countDate = new Date('Feb 17, 2026 00:00:00').getTime();
+        function updateTimer() {
+            var now = new Date().getTime();
+            var gap = countDate - now;
+            var second = 1000, minute = second * 60, hour = minute * 60, day = hour * 24;
 
-    function updateTimer() {
-        var now = new Date().getTime();
-        var gap = countDate - now;
+            var d = Math.floor(gap / day);
+            var h = Math.floor((gap % day) / hour);
+            var m = Math.floor((gap % hour) / minute);
+            var s = Math.floor((gap % minute) / second);
 
-        var second = 1000, minute = second * 60, hour = minute * 60, day = hour * 24;
+            var timerElement = document.getElementById('timer');
+            if(timerElement) { timerElement.innerText = d + "d " + h + "h " + m + "m " + s + "s"; }
+            if (gap < 0) { unlock(); }
+        }
+        setInterval(updateTimer, 1000);
 
-        var d = Math.floor(gap / day);
-        var h = Math.floor((gap % day) / hour);
-        var m = Math.floor((gap % hour) / minute);
-        var s = Math.floor((gap % minute) / second);
-
-        // স্ক্রিনে টাইমার দেখানোর জন্য
-        var timerElement = document.getElementById('timer');
-        if(timerElement) {
-            timerElement.innerText = d + "d " + h + "h " + m + "m " + s + "s";
+        function checkPass() {
+            var pass = document.getElementById('password').value;
+            if (pass === "makfisday") { unlock(); } 
+            else { alert("Nice try, ulta palta try kore labh nai pakhi"); }
         }
 
-        if (gap < 0) { unlock(); }
-    }
-    setInterval(updateTimer, 1000);
-
-    // ২. পাসওয়ার্ড চেক করার ফাংশন
-    function checkPass() {
-        var pass = document.getElementById('password').value;
-        if (pass === "makfisday") {
-            unlock();
-        } else {
-            alert("Nice try, ulta palta try kore labh nai pakhi");
+        function unlock() {
+            document.getElementById('lock-screen').style.display = 'none';
+            document.getElementById('main-content').style.display = 'block';
         }
-    }
 
-    // ৩. আনলক ফাংশন
-    function unlock() {
-        document.getElementById('lock-screen').style.display = 'none';
-        document.getElementById('main-content').style.display = 'block';
-    }
-
-    // ৪. Birthday Girl বাটন এবং গ্যালারির কাজ
-    $(document).ready(function(){
-        $('#birthday_girl').click(function(){
-            $(this).hide(); 
-            $('#gallery').show(); 
-            
-            var slideIndex = 0;
-            function showSlides() {
-                var slides = document.getElementsByClassName("mySlides");
-                for (var i = 0; i < slides.length; i++) {
-                    slides[i].style.display = "none";  
+        $(document).ready(function(){
+            $('#birthday_girl').click(function(){
+                $(this).hide(); 
+                $('#gallery').show(); 
+                var slideIndex = 0;
+                function showSlides() {
+                    var slides = document.getElementsByClassName("mySlides");
+                    for (var i = 0; i < slides.length; i++) { slides[i].style.display = "none"; }
+                    slideIndex++;
+                    if (slideIndex > slides.length) {slideIndex = 1}    
+                    slides[slideIndex-1].style.display = "block";  
+                    setTimeout(showSlides, 2500); 
                 }
-                slideIndex++;
-                if (slideIndex > slides.length) {slideIndex = 1}    
-                slides[slideIndex-1].style.display = "block";  
-                setTimeout(showSlides, 2500); 
-            }
-            showSlides();
+                showSlides();
+            });
         });
-    });
-</script>
+    </script>
+</body>
+</html>
