--- a/index.html
+++ b/index.html
@@ -1,95 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Happy Birthday Pakhi</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="loading.css">
-    <link href='https://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet/less" href="cake.less">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
-    <style>
-        #lock-screen {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: #ffe4e1; z-index: 9999; display: flex;
-            flex-direction: column; align-items: center; justify-content: center;
-            font-family: 'Signika', sans-serif; text-align: center; padding: 20px;
-        }
-        #timer { font-size: 30px; color: #ff69b4; margin: 20px 0; font-weight: bold; }
-        .pass-box { margin-top: 20px; }
-        .pass-box input { padding: 10px; border-radius: 5px; border: 1px solid #ffb6c1; outline: none; }
-        .pass-box button { padding: 10px 20px; background: #ff69b4; color: white; border: none; border-radius: 5px; cursor: pointer; }
-    </style>
-</head>
-
-<body>
-    <div id="lock-screen">
-        <h2 style="color: #d14d39;">Surprise Loading...</h2>
-        <div id="timer"></div>
-        <p>Please wait madam until the 17th of the month❤️</p>
-        <div class="pass-box">
-            <input type="password" id="password" placeholder="গোপন পাসওয়ার্ড দিন...">
-            <button onclick="checkPass()">Unlock</button>
-        </div>
-    </div>
-
-    <div id="main-content" style="display:none;">
-        <div class="loading"></div>
-        <audio class="song" controls loop><source src="hbd.mp3"></source></audio>
-
-        <div class="balloons text-center" id="b1"><h2 style="color:#F2B300;">H</h2></div>
-        <div class="balloons text-center" id="b2"><h2 style="color:#0719D4;">B</h2></div>
-        <div class="balloons text-center" id="b3"><h2 style="color:#D14D39;">D</h2></div>
-        <div class="balloons text-center" id="b4"><h2 style="color:#8FAD00;">J</h2></div>
-        <div class="balloons text-center" id="b5"><h2 style="color:#8377E4;">A</h2></div>
-        <div class="balloons text-center" id="b6"><h2 style="color:#99C96A;">A</h2></div>
-        <div class="balloons text-center" id="b7"><h2 style="color:#20CFB4;">N</h2></div>
-
-        <img src="Balloon-Border.png" width="100%" class="balloon-border">
-
-        <div class="container">
-            <div class="row"><div class="col-md-12 text-center"><img src="banner.png" class="bannar"></div></div>
-            <div class="row cake-cover">
-                <div class="col-md-12 text-center">
-                    <div class="cake">
-                      <div class="velas"><div class="fuego"></div><div class="fuego"></div><div class="fuego"></div><div class="fuego"></div><div class="fuego"></div></div>
-                      <div class="cobertura"></div><div class="bizcocho"></div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row message">
-                <div class="col-md-12">
-                    <p>Happy 17th Birthday Jaan ❤️</p>
-                    <p>It’s wild to think that this is your last year before the world starts calling you an adult.</p>
-                    <p>You have this amazing energy that makes everything better the second you show up.</p>
-                    <p><strong>I love you a lot ❤️❤️</strong></p>
-                    <p>Happy Birthday Makfi!</p>
-                </div>
-            </div>
-
-            <div class="text-center" style="margin-top: 20px; margin-bottom: 100px;">
-                <button class="btn btn-primary" id="birthday_girl">Birthday Girl</button>
-                <div id="gallery" style="display:none; margin-top:30px;">
-                    <h3 style="color: #ef5350;">BIRTHDAY GIRL❤️</h3>
-                    <div style="max-width: 300px; margin: auto;">
-                        <img src="m1.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff;">
-                        <img src="m2.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
-                        <img src="m3.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
-                        <img src="m4.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
-                        <img src="m5.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
-                        <img src="m6.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
-                        <img src="m7.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
-                        <img src="m8.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
-                        <img src="m9.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
-                        <img src="m10.jpg" class="mySlides" style="width:100%; border-radius: 15px; border: 5px solid #fff; display:none;">
-                    </div>
-                </div>
-            </div>
-
-            <div class="navbar navbar-fixed-bottom">
+<div class="navbar navbar-fixed-bottom">
                 <div class="row">
                     <div class="col-md-6 text-center col-md-offset-3">
                         <button class="btn btn-primary" id="turn_on">Turn On Lights</button>
@@ -111,6 +20,7 @@
     <script src="effect.js"></script>
 
     <script>
+        // টাইমার সেটআপ
         var countDate = new Date('Feb 17, 2026 00:00:00').getTime();
 
         function updateTimer() {
@@ -124,22 +34,30 @@
             var s = Math.floor((gap % minute) / second);
 
             var timerElement = document.getElementById('timer');
-            if(timerElement) { timerElement.innerText = d + "d " + h + "h " + m + "m " + s + "s"; }
+            if(timerElement) {
+                timerElement.innerText = d + "d " + h + "h " + m + "m " + s + "s";
+            }
             if (gap < 0) { unlock(); }
         }
         setInterval(updateTimer, 1000);
 
+        // পাসওয়ার্ড চেক
         function checkPass() {
             var pass = document.getElementById('password').value;
-            if (pass === "makfisday") { unlock(); } 
-            else { alert("Nice try, ulta palta try kore labh nai pakhi"); }
+            if (pass === "makfisday") {
+                unlock();
+            } else {
+                alert("Nice try, ulta palta try kore labh nai pakhi");
+            }
         }
 
+        // আনলক ফাংশন
         function unlock() {
             document.getElementById('lock-screen').style.display = 'none';
             document.getElementById('main-content').style.display = 'block';
         }
 
+        // স্লাইডশো লজিক
         $(document).ready(function(){
             $('#birthday_girl').click(function(){
                 $(this).hide(); 
