--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="timer"></div>
         <p>Please wait madam until the 17th of the month❤️</p>
         <div class="pass-box">
-            <input type="password" id="password" placeholder="গোপন পাসওয়ার্ড দিন...">
+            <input type="password" id="password" placeholder="Secret Password">
             <button onclick="checkPass()">Unlock</button>
         </div>
     </div>
