--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
                 <p>It’s wild to think that this is your last year</p>
                 <p>before the world starts calling you an adult.</p>
                 <p>You have this amazing energy</p>
+				<p>It feels so special to celebrate this day with you. <p>
+				<p>I still remember when we first met—you were 16,<p>
+				<p>and today, you’re turning 17. You’re officially growing up!<p>
+				<p>Watching you grow <p>
+				<p>and being a part of your life has been the best part of my last few months.<p>
+				<p>Enjoy your day to the fullest, Jaan. You deserve all the happiness in the universe.<p>
                 <p>that makes everything better the second you show up.</p>
                 <p><strong>I love you a lot ❤️❤️</strong></p>
                 <p>Happy Birthday Makfi!</p>
@@ -185,7 +191,7 @@ function updateTimer() {
 setInterval(updateTimer, 1000);
 
 function checkPass() {
-    if (document.getElementById("password").value === "makfisday") {
+    if (document.getElementById("password").value === "makfi'sday") {
         unlock();
     } else {
         alert("Nice try 😌 wait koren pakhi");
