--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <p>that makes everything better the second you show up Cutu ❤️.</p>
                 <p><strong>I love you a lot❤️❤️But You love Chika anyways Mwahhhhhhhh amar jaanbaccha❤️</strong></p>
                 <p>Happy Birthday again Makfi pakhi!❤️</p>
-				<p>beshi kichu korte parlam na tmr jonno tar jonno sorry ajke meet korte parle hoyto pura din tai special kortam tmr <p>
+				<p>beshi kichu korte parlam na tmr jonno tar jonno sorry ajke meet korte parle hoyto pura din ta aro special kortam tmr <p>
 			    <p>Suvo hok apnar ajker and shamner din gula <p>❤️
             </div>
         </div>
