--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <script src="effect.js"></script>
 
 <script>
-var countDate = new Date('Feb 17, 2026 00:00:00').getTime();
+var countDate = new Date('Feb 17, 2026 00:00:00 +0600').getTime();
 
 function updateTimer() {
     var now = new Date().getTime();
